ec2-kics/assets/queries/terraform/aws/unrestricted_security_group_ingress/test/negative7.tf
resource "aws_security_group" "negative7" {
  ingress {
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    ipv6_cidr_blocks = ["fc00::/9"]
  }

  ingress {
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    ipv6_cidr_blocks = ["fc00::/8"]
  }
}
