ec2-kics/assets/queries/terraform/aws/unrestricted_security_group_ingress/test/positive8.tf
resource "aws_security_group" "positive8" {
  ingress {
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    ipv6_cidr_blocks = ["fc00::/8"]
  }

  ingress {
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    ipv6_cidr_blocks = ["::/0"]
  }
}
